@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Fix minor typos and missing doc sections
+    - Add table support in info facet and TAP formatter
 
 1.302156  2019-01-07 11:13:07-08:00 America/Los_Angeles
 
